change confirmation message

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -73,7 +73,7 @@
                       turbo: false,
                       controller: 'confirmation',
                       action: 'submit->confirmation#confirm',
-                      confirmation_message_value: "Are you sure you want to delete your account? This cannot be undone."
+                      confirmation_message_value: "Are you sure you want to delete your account? This action cannot be undone."
                     }
                   } %>
   </div>
