autogrow text_area with stimulus

--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -21,7 +21,7 @@
         <span class="text-xs text-slate-700 dark:text-slate-400">(optional)</span>
       </p>
     <% end %>
-    <%= form.text_area :comments, placeholder: 'Add comments...', class: 'form-input resize-vertical', data: { controller: 'autogrow', action: 'input->autogrow#grow' } %>
+    <%= form.text_area :comments, placeholder: 'Add comments...', class: 'form-input', data: { controller: 'autogrow', action: 'input->autogrow#grow' } %>
   </div>
 
   <div class="flex items-center justify-between flex-wrap">
