--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,9 +21,22 @@
       <%= f.text_field :username, class: 'form-input', data: { form_validation_target: "username", action: "blur->form-validation#validateUsername" } %>
     </div>
 
-    <div class="form-group">
+    <div class="form-group relative">
       <%= f.label :password, class: 'form-label' %>
-      <%= f.password_field :password, autocomplete: "new-password", class: 'form-input', data: { form_validation_target: "password", action: "input->form-validation#validatePassword blur->form-validation#validatePasswordConfirmation input->form-validation#showPasswordRequirements" } %>
+      <div class="flex items-center" data-controller="password-visibility">
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-input w-full', data: { form_validation_target: "password", action: "input->form-validation#validatePassword blur->form-validation#validatePasswordConfirmation input->form-validation#showPasswordRequirements", password_visibility_target: "password" } %>
+
+        <button type="button" class="-ml-9" data-action="password-visibility#toggle">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" data-password-visibility-target="visibleIcon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+          </svg>
+
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hidden" data-password-visibility-target="hiddenIcon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 0 0 1.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.451 10.451 0 0 1 12 4.5c4.756 0 8.773 3.162 10.065 7.498a10.522 10.522 0 0 1-4.293 5.774M6.228 6.228 3 3m3.228 3.228 3.65 3.65m7.894 7.894L21 21m-3.228-3.228-3.65-3.65m0 0a3 3 0 1 0-4.243-4.243m4.242 4.242L9.88 9.88" />
+          </svg>
+        </button>
+      </div>
 
       <div class="hidden" data-form-validation-target="passwordRequirements">
         <p class="help-text mt-2 mb-1">Password must contain:</p>
@@ -37,9 +50,24 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group relative">
       <%= f.label :password_confirmation, class: 'form-label' %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-input', data: { form_validation_target: "passwordConfirmation", action: "input->form-validation#validatePasswordConfirmation" } %>
+      <div class="flex items-center" data-controller="password-visibility">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-input', data: { form_validation_target: "passwordConfirmation", action: "input->form-validation#validatePasswordConfirmation", password_visibility_target: "password" } %>
+
+        <button type="button" class="-ml-9" data-action="password-visibility#toggle">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" data-password-visibility-target="visibleIcon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+          </svg>
+
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hidden" data-password-visibility-target="hiddenIcon">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 0 0 1.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.451 10.451 0 0 1 12 4.5c4.756 0 8.773 3.162 10.065 7.498a10.522 10.522 0 0 1-4.293 5.774M6.228 6.228 3 3m3.228 3.228 3.65 3.65m7.894 7.894L21 21m-3.228-3.228-3.65-3.65m0 0a3 3 0 1 0-4.243-4.243m4.242 4.242L9.88 9.88" />
+          </svg>
+        </button>
+      </div>
+
+      <span class="error-message hidden my-1" data-form-validation-target="passwordConfirmationError">Passwords do not match</span>
     </div>
 
     <%= f.submit "Sign up", class: 'btn btn-primary w-full' %>
