--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,12 +1,50 @@
 <div class="max-w-3xl mx-auto px-4 my-16">
-  <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
-    <h1 class="heading">Teams</h1>
-    <div class="flex items-center justify-end">
-      <%= link_to "New team", new_team_path, class: "btn btn-primary" %>
+  <% if current_user.owned_teams.any? %>
+    <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
+      <h1 class="heading">My Teams</h1>
+      <div class="flex items-center justify-end">
+        <%= link_to "New team", new_team_path, class: "btn btn-primary" %>
+      </div>
     </div>
+
+    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+      <% current_user.owned_teams.each do |team| %>
+        <div class="py-3">
+          <%= render team %>
+
+          <%= link_to "View team", team, class: "btn-link inline-block my-3" %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+
+  <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
+    <h1 class="heading">My Team Memberships</h1>
   </div>
 
-  <div id="teams" class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+  <% if current_user.membered_teams.any? %>
+    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+      <% current_user.membered_teams.each do |team| %>
+        <div class="py-3">
+          <%= render team %>
+
+          <%= link_to "View team", team, class: "btn-link inline-block my-3" %>
+        </div>
+      <% end %>
+    </div>
+  <% else %>
+    <div class="flex flex-col gap-6 items-center justify-center py-12">
+      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You're not on any teams yet!</p>
+
+      <%= link_to 'Find a team', teams_path, class: 'btn btn-white' %>
+    </div>
+  <% end %>
+
+  <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
+    <h1 class="heading">All Teams</h1>
+  </div>
+
+  <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
     <% @teams.each do |team| %>
       <div class="py-3">
         <%= render team %>
