--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -29,5 +29,10 @@
       <% end %>
     </p>
   <% end %>
-  <time class="text-slate-600 dark:text-slate-400 text-xs mt-2" datetime="<%= run.created_at.to_formatted_s(:long) %>">Posted <%= time_ago_in_words(run.created_at) + " ago" %></time>
+  <div class="flex">
+    <time class="text-slate-600 dark:text-slate-400 text-xs mt-2 pr-3" datetime="<%= run.created_at.to_formatted_s(:long) %>">Posted <%= time_ago_in_words(run.created_at) + " ago" %></time>
+    <%- if run.edited? %>
+      <time class="text-slate-600 dark:text-slate-400 text-xs mt-2 pl-3 border-l dark:border-slate-700" datetime="<%= run.updated_at.to_formatted_s(:long) %>">Edited <%= time_ago_in_words(run.updated_at) + " ago" %></time>
+    <%- end %>
+  </div>
 </article>
