--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -4,9 +4,21 @@
     <%= form.date_field :date, required: true, autofocus: true, max: Date.today, value: form.object.new_record? ? Date.today : @run.date, class: 'form-input', data: { form_validation_target: "date", action: "blur->form-validation#validateDate" } %>
   </div>
 
-  <div class="form-group">
-    <%= form.label :distance, 'How many miles did you run?', class: 'form-label' %>
-    <%= form.number_field :distance, required: true, step: :any, min: 0, class: 'form-input', data: { form_validation_target: "distance", action: "blur->form-validation#validateDistance" } %>
+  <div data-controller="distance-shortcuts">
+    <div class="form-group">
+      <%= form.label :distance, 'How many miles did you run?', class: 'form-label' %>
+      <%= form.number_field :distance, required: true, step: 0.1, min: 0, class: 'form-input', data: { form_validation_target: "distance", action: "blur->form-validation#validateDistance", distance_shortcuts_target: "distance" } %>
+    </div>
+
+    <div class="form-group flex flex-wrap gap-3 -mt-2">
+      <button type="button" data-action="click->distance-shortcuts#setDistance" data-distance-value="1" class="btn btn-sm btn-white">1 mile</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance" data-distance-value="5" class="btn btn-sm btn-white">5 miles</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance" data-distance-value="10" class="btn btn-sm btn-white">10 miles</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance" data-distance-value="<%= (3 / 1.609344).round(3) %>" class="btn btn-sm btn-white">3 km</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance" data-distance-value="<%= (5 / 1.609344).round(3) %>" class="btn btn-sm btn-white">5 km</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance" data-distance-value="<%= (8 / 1.609344).round(3) %>" class="btn btn-sm btn-white">8 km</button>
+      <button type="button" data-action="click->distance-shortcuts#setDistance" data-distance-value="<%= (10 / 1.609344).round(3) %>" class="btn btn-sm btn-white">10 km</button>
+    </div>
   </div>
 
   <div class="form-group">
