--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,6 +18,7 @@
     <div class='form-group'>
       <%= f.label :username, class: "form-label" %>
       <%= f.text_field :username, class: "form-input", data: { form_validation_target: "username", action: "blur->form-validation#validateUsername" } %>
+      <span class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</span>
     </div>
 
     <div class="py-10 mt-6 border-t border-slate-200 dark:border-slate-700">
@@ -28,6 +29,7 @@
     <div class='form-group'>
       <%= f.label :email, class: "form-label" %>
       <%= f.email_field :email, autocomplete: "email", class: "form-input", data: { form_validation_target: "email", action: "blur->form-validation#validateEmail" } %>
+      <span class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</span>
     </div>
 
     <div class='form-group relative'>
