--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -2,6 +2,7 @@
   <div class="form-group">
     <%= form.label :name, class: 'form-label' %>
     <%= form.text_field :name, class: 'form-input', data: { form_validation_target: 'teamName', action: 'blur->form-validation#validateTeamName' } %>
+    <span class="error-message hidden my-1" data-form-validation-target="teamNameError">Name cannot be blank</span>
   </div>
 
   <div class="form-group">
@@ -11,6 +12,7 @@
       </p>
     <% end %>
     <%= form.text_area :description, placeholder: 'Add a description...', class: 'form-input', data: { controller: 'autogrow', form_validation_target: 'teamDescription', action: 'input->autogrow#grow input->form-validation#validateTeamDescription' } %>
+    <span class="error-message hidden my-1" data-form-validation-target="teamDescriptionError">Description must be 500 characters or less</span>
     <p class="help-text my-1">Maximum 500 characters</p>
   </div>
 
