--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -2,14 +2,8 @@
   <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
     <h1 class="heading">My Teams</h1>
   </div>
-  <% if current_user.owned_teams.any? %>
-    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% current_user.owned_teams.each do |team| %>
-        <div class="py-6">
-          <%= render team %>
-        </div>
-      <% end %>
-    </div>
+  <% if @owned_teams.any? %>
+    <%= render 'team_list', teams: @owned_teams %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
       <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You don't have any teams yet.</p>
@@ -21,14 +15,8 @@
   <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
     <h1 class="heading">My Team Memberships</h1>
   </div>
-  <% if current_user.membered_teams.any? %>
-    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% current_user.membered_teams.each do |team| %>
-        <div class="py-6">
-          <%= render team %>
-        </div>
-      <% end %>
-    </div>
+  <% if @membered_teams.any? %>
+    <%= render 'team_list', teams: @membered_teams %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
       <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You're not a member of any teams yet.</p>
@@ -40,14 +28,8 @@
   <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
     <h1 class="heading">Other Teams</h1>
   </div>
-  <% if current_user.other_teams.any? %>
-    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% current_user.other_teams.each do |team| %>
-        <div class="py-6">
-          <%= render team %>
-        </div>
-      <% end %>
-    </div>
+  <% if @other_teams.any? %>
+    <%= render 'team_list', teams: @other_teams %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
       <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No other teams to show.</p>
