--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,7 +35,7 @@
   </div>
 
   <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-    <% @user.runs_in_range(Date.current.beginning_of_week..Date.current).each do |run| %>
+    <% @user.runs_in_date_range(Date.current.beginning_of_week..Date.current).each do |run| %>
       <div class="py-3">
         <%= render run %>
 
