--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -10,7 +10,7 @@
       <% end %>
     <% end %>
   </div>
-  <% if current_user == team.owner %>
+  <% if current_user.owns?(team) %>
     <%= link_to 'Edit team', edit_team_path(team), class: 'btn btn-white' %>
   <% else %>
     <% if current_user.member_of?(team) %>
