--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,38 +1,7 @@
 <div class="max-w-3xl mx-auto px-4 my-16">
-  <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
-    <h1 class="heading">My Teams</h1>
-  </div>
-  <% if @owned_teams.any? %>
-    <%= render 'team_list', teams: @owned_teams %>
-  <% else %>
-    <div class="flex flex-col gap-6 items-center justify-center py-12">
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You don't have any teams yet.</p>
+  <%= render 'owned_teams', owned_teams: @owned_teams %>
 
-      <%= link_to 'Create a team', new_team_path, class: 'btn btn-primary' %>
-    </div>
-  <% end %>
+  <%= render 'membered_teams', membered_teams: @membered_teams %>
 
-  <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
-    <h1 class="heading">My Team Memberships</h1>
-  </div>
-  <% if @membered_teams.any? %>
-    <%= render 'team_list', teams: @membered_teams %>
-  <% else %>
-    <div class="flex flex-col gap-6 items-center justify-center py-12">
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">You're not a member of any teams yet.</p>
-
-      <%= link_to 'Find a team', teams_path, class: 'btn btn-white' %>
-    </div>
-  <% end %>
-
-  <div class="flex flex-wrap gap-6 items-center justify-between pb-6 border-b dark:border-slate-700">
-    <h1 class="heading">Other Teams</h1>
-  </div>
-  <% if @other_teams.any? %>
-    <%= render 'team_list', teams: @other_teams %>
-  <% else %>
-    <div class="flex flex-col gap-6 items-center justify-center py-12">
-      <p class="prose dark:prose-invert text-slate-700 dark:text-slate-400">No other teams to show.</p>
-    </div>
-  <% end %>
+  <%= render 'other_teams', other_teams: @other_teams %>
 </div>
