--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,23 +9,7 @@
     <% end %>
   </div>
 
-  <div class="pb-3 mt-10">
-    <h1 class="heading pb-6">User Stats</h1>
-    <div class="block sm:flex space-y-8 sm:space-y-0 sm:items-center sm:justify-around">
-      <div class='flex flex-col items-center justify-center text-center'>
-        <p class='font-semibold text-2xl'>
-          <%= @user.total_miles %>
-        </p>
-        <p class='text-slate-700 dark:text-slate-400'>miles ran</p>
-      </div>
-      <div class='flex flex-col items-center justify-center text-center'>
-        <p class='font-semibold text-2xl'>
-          <%= clock_time_display(@user.total_duration) %>
-        </p>
-        <p class='text-slate-700 dark:text-slate-400'>spent running</p>
-      </div>
-    </div>
-  </div>
+  <%= render 'user_stats', user: @user %>
 
   <div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
     <h1 class="heading">Runs This Week</h1>
