--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -15,7 +15,7 @@
     @apply bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-600/20 text-white;
 
     &.btn-outline {
-      @apply border-indigo-600 bg-transparent text-indigo-600 hover:bg-indigo-700 hover:text-white;
+      @apply border border-indigo-600 bg-transparent text-indigo-600 hover:bg-indigo-700 hover:text-white;
     }
   }
 
@@ -23,7 +23,7 @@
     @apply bg-rose-600 hover:bg-rose-700 focus:ring-rose-600/20 text-white;
 
     &.btn-outline {
-      @apply border-rose-600 bg-transparent text-rose-600 hover:bg-rose-700 hover:text-white;
+      @apply border border-rose-600 bg-transparent text-rose-600 hover:bg-rose-700 hover:text-white;
     }
   }
 
@@ -31,7 +31,7 @@
     @apply bg-slate-800 hover:bg-slate-900 focus:ring-slate-800/20 text-white dark:hover:text-slate-100 dark:hover:bg-slate-700 dark:focus:ring-slate-800;
 
     &.btn-outline {
-      @apply border-slate-800 bg-transparent text-slate-800 hover:bg-slate-800 hover:text-white;
+      @apply border border-slate-800 bg-transparent text-slate-800 hover:bg-slate-800 hover:text-white;
     }
   }
 
@@ -39,7 +39,7 @@
     @apply bg-slate-200/90 hover:bg-slate-300/80 focus:ring-slate-300/20 text-slate-700;
 
     &.btn-outline {
-      @apply bg-transparent border-slate-200/90 hover:bg-slate-300/80 hover:border-slate-300/80;
+      @apply border bg-transparent border-slate-200/90 hover:bg-slate-300/80 hover:border-slate-300/80;
     }
   }
 
@@ -47,7 +47,7 @@
     @apply bg-white hover:bg-white text-slate-700 focus:ring-slate-100 border border-slate-300 shadow-sm hover:border-slate-400 shadow-slate-300/20 hover:shadow-slate-300/50 dark:shadow-none dark:bg-slate-700/70 dark:text-slate-200 dark:border-slate-700 dark:focus:ring-slate-600/30 dark:hover:border-slate-600 dark:hover:bg-slate-800;
 
     &.btn-outline {
-      @apply bg-transparent text-white hover:text-slate-700 hover:bg-white focus:ring-slate-100/20 border-white;
+      @apply border bg-transparent text-white hover:text-slate-700 hover:bg-white focus:ring-slate-100/20 border-white;
     }
   }
 
