--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -1,5 +1,5 @@
 <article id="<%= dom_id run %>" class="py-6 prose dark:prose-invert">
-  <h2 class="subheading"><%= pretty_date(run.date) %></h2>
+  <h2 class="subheading"><%= pretty_date(run.date).titlecase %></h2>
 
   <table class="text-base my-0 table-auto">
     <tr>
