--- a/app/views/users/_user_stats.html.erb
+++ b/app/views/users/_user_stats.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class='flex flex-col items-center justify-center text-center'>
       <p class='font-semibold text-2xl'>
-        <%= clock_time_display(user.total_duration) %>
+        <%= precise_distance_of_time(user.total_duration, format: :short) %>
       </p>
       <p class='text-slate-700 dark:text-slate-400'>spent running</p>
     </div>
