--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :season_start_date, class: 'form-label' do %>
+    <%= form.label :season_start_date, class: 'form-label', data: { form_validation_target: 'seasonEndDateLabel' } do %>
       <p> Season start date
         <span class="help-text">(optional)</span>
       </p>
@@ -42,7 +42,7 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :season_end_date, class: 'form-label' do %>
+    <%= form.label :season_end_date, class: 'form-label transition duration-300 ease-in-out', data: { form_validation_target: 'seasonEndDateLabel' } do %>
       <p> Season end date
         <span class="help-text">(optional)</span>
       </p>
