fix: remove incorrect stimulus data target

--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :season_start_date, class: 'form-label', data: { form_validation_target: 'seasonEndDateLabel' } do %>
+    <%= form.label :season_start_date, class: 'form-label' do %>
       <p> Season start date
         <span class="help-text">(optional)</span>
       </p>
