--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -62,7 +62,7 @@
   </div>
 
   <div class="flex items-center justify-between flex-wrap">
-    <div class="sm:flex-1 sm:mb-0 mb-6">
+    <div class="sm:flex-1">
       <% if form.object.new_record? %>
         <%= form.submit 'Create team', class: 'btn btn-primary' %>
       <% else %>
