--- a/app/views/teams/_join_requests.html.erb
+++ b/app/views/teams/_join_requests.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-10 pb-6 border-b dark:border-slate-700">
-  <h1 class="heading">Join Requests</h1>
+  <h1 class="heading"><%= pluralize(join_requests.count, 'Join Request') %></h1>
 </div>
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
   <% join_requests.each do |request| %>
