--- a/app/views/teams/_team_buttons.html.erb
+++ b/app/views/teams/_team_buttons.html.erb
@@ -7,10 +7,12 @@
     <% request = team.join_requests.find_by(user_id: current_user.id) %>
     <% if request.nil? %>
       <%= button_to 'Join team', join_team_path(team), class: 'btn btn-primary' %>
+    <% elsif request.rejected? && request.allowed? %>
+      <%= button_to 'Join team', team_join_request_path(request), method: :patch, class: 'btn btn-primary' %>
     <% elsif request.pending? %>
       <%= button_to 'Cancel request', cancel_request_path(request), method: :delete, class: 'btn btn-destructive' %>
-    <% elsif request.rejected? %>
-      <p>Sorry, <%= team.owner.username %> rejected your join request.</p>
+    <% else %>
+      <p class="error-message text-base">You have been blocked from this team.</p>
     <% end %>
   <% end %>
 <% end %>
