--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between">
+<div class="flex items-center justify-between flex-wrap gap-y-3">
   <div>
     <p class="subheading"><%= link_to team.name, team, class: 'hover:text-indigo-700 transition ease-in-out duration-300' %></p>
     <p class="help-text"><%= team.owner.username %></p>
