--- a/app/views/teams/_team_stats.html.erb
+++ b/app/views/teams/_team_stats.html.erb
@@ -23,7 +23,7 @@
         <div class='flex flex-col gap-0.5 items-center justify-center text-center'>
           <p class="text-lg">Mileage Goal</p>
           <p class='font-semibold text-2xl'>
-            <%= team.total_miles %> out of <%= team.mileage_goal %>
+            <%= team.total_miles_in_season %> out of <%= team.mileage_goal %>
           </p>
           <% if team.season_progress == 0.0 %>
             <p class='text-slate-700 dark:text-slate-400'>Season hasn't started yet</p>
