--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
       <h1 class="heading">Runs This Week</h1>
     </div>
     <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <% @user.runs_in_date_range(Date.current.beginning_of_week..Date.current).each do |run| %>
+      <% @user.runs_in_date_range(Date.current.beginning_of_week..Date.current).excluding_date(Date.today).each do |run| %>
         <div class="py-3">
           <%= render run %>
           <%= link_to "View run", run, class: "btn-link inline-block my-3" %>
