--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
 
     <div class='form-group'>
       <%= f.label :username, class: "form-label" %>
-      <%= f.text_field :username, class: "form-input", data: { form_validation_target: "username", action: "blur->form-validation#validateUsername" } %>
+      <%= f.text_field :username, class: "form-input", data: { form_validation_target: "username", action: "input->form-validation#validateUsername" } %>
       <span class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</span>
     </div>
 
@@ -28,7 +28,7 @@
 
     <div class='form-group'>
       <%= f.label :email, class: "form-label" %>
-      <%= f.email_field :email, autocomplete: "email", class: "form-input", data: { form_validation_target: "email", action: "blur->form-validation#validateEmail" } %>
+      <%= f.email_field :email, autocomplete: "email", class: "form-input", data: { form_validation_target: "email", action: "input->form-validation#validateEmail" } %>
       <span class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</span>
     </div>
 
