--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,20 +13,20 @@
 
     <div class="form-group">
       <%= f.label :email, class: 'form-label' %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-input', data: { form_validation_target: "email", action: "blur->form-validation#validateEmail" } %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-input', data: { form_validation_target: "email", action: "input->form-validation#validateEmail" } %>
       <span class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</span>
     </div>
 
     <div class="form-group">
       <%= f.label :username, class: 'form-label' %>
-      <%= f.text_field :username, class: 'form-input', data: { form_validation_target: "username", action: "blur->form-validation#validateUsername" } %>
+      <%= f.text_field :username, class: 'form-input', data: { form_validation_target: "username", action: "input->form-validation#validateUsername" } %>
       <span class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</span>
     </div>
 
     <div class="form-group relative">
       <%= f.label :password, class: 'form-label' %>
       <div class="flex items-center" data-controller="password-visibility">
-        <%= f.password_field :password, autocomplete: "new-password", class: 'form-input w-full', data: { form_validation_target: "password", action: "input->form-validation#validatePassword blur->form-validation#validatePasswordConfirmation input->form-validation#showPasswordRequirements", password_visibility_target: "password" } %>
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-input w-full', data: { form_validation_target: "password", action: "input->form-validation#validatePassword input->form-validation#validatePasswordConfirmation input->form-validation#showPasswordRequirements", password_visibility_target: "password" } %>
 
         <button type="button" class="-ml-9" data-action="password-visibility#toggle">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" data-password-visibility-target="visibleIcon">
