--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <%= form.label :duration_input, 'How much time did you run for?', class: 'form-label' %>
-    <%= form.text_field :duration_input, value: form.object.new_record? ? '' : clock_time_display(@run.duration), class: 'form-input', data: { form_validation_target: "duration", action: "blur->form-validation#validateDuration" } %>
+    <%= form.text_field :duration_input, value: form.object.new_record? ? '' : clock_time_display(@run.duration), class: 'form-input', data: { form_validation_target: "duration", action: "input->form-validation#validateDuration" } %>
     <span class="error-message hidden my-1" data-form-validation-target="durationError">Duration must be in MM:SS or HH:MM:SS format and must be less than 24 hours</span>
     <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Enter time in MM:SS or HH:MM:SS format.</p>
   </div>
