--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -31,3 +31,27 @@
 .nav-link-dark.nav-link-active:after {
   @apply hidden;
 }
+
+.sidebar-link {
+  @apply rounded-lg px-4 py-3 focus:text-indigo-600 text-base font-medium hover:transition hover:duration-300 hover:ease-in-out dark:focus:text-white flex gap-4 items-center;
+}
+
+.sidebar-link-active {
+  @apply text-slate-900 dark:text-slate-200 bg-slate-200 dark:bg-slate-700/70;
+}
+
+.sidebar-link-inactive {
+  @apply text-slate-700 dark:text-slate-300 hover:text-slate-900 dark:hover:text-slate-200 hover:bg-slate-200 dark:hover:bg-slate-700/70;
+}
+
+.tab-link {
+  @apply rounded-lg px-2 flex flex-col items-center gap-1 text-sm font-medium hover:transition hover:duration-300 hover:ease-in-out dark:focus:text-white;
+}
+
+.tab-link-active {
+  @apply text-indigo-600 dark:text-indigo-500;
+}
+
+.tab-link-inactive {
+  @apply text-slate-700 dark:text-slate-300 hover:text-indigo-600 dark:hover:text-indigo-500;
+}
