change button centering media query

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -6,7 +6,7 @@
       <p class="prose dark:prose-invert text-center mx-auto"><%= @team.description %></p>
     <% end %>
 
-    <div class="flex items-center justify-center sm:justify-end mt-6">
+    <div class="flex items-center justify-center md:justify-end mt-6">
       <%= render 'team_buttons', team: @team %>
     </div>
   </div>
