--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -7,16 +7,19 @@
       <td><span class="text-base"><%= run.distance %> <span class="text-sm text-slate-600 dark:text-slate-400">mi</span></span></td>
       <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= run.distance_km %> km</span></td>
     </tr>
-    <tr>
-      <th>Time:</th>
-      <td><span class="text-base"><%= clock_time_display(run.duration) %></span></td>
-      <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= precise_time_ago(run.duration, { format: :short }) %></span></td>
-    </tr>
-    <tr>
-      <th>Pace:</th>
-      <td><span class="text-base"><%= clock_time_display(run.pace_per_mile) %> <span class="text-sm text-slate-600 dark:text-slate-400">/ mi</span></span></td>
-      <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= clock_time_display(run.pace_per_km) %> / km</span></td>
-    </tr>
+    
+    <% if run.duration.present? %>
+      <tr>
+        <th>Time:</th>
+        <td><span class="text-base"><%= clock_time_display(run.duration) %></span></td>
+        <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= precise_time_ago(run.duration, { format: :short }) %></span></td>
+      </tr>
+      <tr>
+        <th>Pace:</th>
+        <td><span class="text-base"><%= clock_time_display(run.pace_per_mile) %> <span class="text-sm text-slate-600 dark:text-slate-400">/ mi</span></span></td>
+        <td class='hidden md:block'><span class="text-sm text-slate-600 dark:text-slate-400"><%= clock_time_display(run.pace_per_km) %> / km</span></td>
+      </tr>
+    <% end %>
   </table>
 
   <% unless run.comments.blank? || !current_page?(run_path(run)) %>
